# imageProcessingUtils

./: .gitignore  INSTALL_IN_OTHER_ENV.md  LICENSE  MANIFEST.in  README.md  debug_external_repo.py  diagnose_yolo_models.py  external_repo_diagnostic.py  package_test_suite.py  pyproject.toml  requirements.txt  setup.py  test_unified_structure.py  verify_cleanup.py
.dev/claude/: README.md  test_imports.py  test_preprocessing.py
.dev/scripts/: debug_external_repo.py  reinstall_package.py  test_model_discovery.py
docs/: IMPORT_GUIDE.md  QUICK_START.md  README.md  api_reference.md  yolo.md
examples/: README.md  basic_segmentation.py  segmentation_example.py  yolo_training_example.py
src/: __init__.py
src/imageProcessingUtils/: __init__.py
src/imageProcessingUtils/file_io/: __init__.py  data_loaders.py  nd2_reader.py
src/imageProcessingUtils/image_processing/: __init__.py  preprocessing.py
src/imageProcessingUtils/yolo/: __init__.py  model_training.py  segmentation.py
src/imageProcessingUtils/yolo/runs/segment/train/: args.yaml  results.csv
src/imageProcessingUtils/yolo/runs/segment/train2/: args.yaml
src/imageProcessingUtils/yolo/runs/segment/train3/: args.yaml
src/imageProcessingUtils/yolo/runs/segment/train4/: args.yaml  results.csv
src/imageProcessingUtils/yolo/runs/segment/train5/: args.yaml  results.csv
src/imageProcessingUtils/yolo/runs/segment/train6/: args.yaml
src/image_processing/: filters.py
src/visualization/: plots.py
tests/: conftest.py  create_test_image.py  test_file_io.py  test_imports.py  test_package_structure.py  test_yolo_segmentation.py
tests/sample_data/sample_uint8_images/: 881_PLX_Cre-_CA1_20x.nd2_preprocessed_uint8.npy  883_PLX_Cre+_CA1_10x.nd2_preprocessed_uint8.npy
tests/sample_uint8_images/: 881_PLX_Cre-_CA1_10x.nd2_preprocessed_uint8.npy  881_PLX_Cre-_CA1_20x001.nd2_preprocessed_uint8.npy
tests/test_file_io/: test_file_io.py
tests/test_yolo/: test_yolo_segmentation.py
